# xbmc-addon-xvdr

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  configure.in  index.html  params.json
addons/: Makefile.am
addons/library.xbmc.addon/: dlfcn-win32.c  dlfcn-win32.h  libXBMC_addon.h
addons/library.xbmc.gui/: libXBMC_gui.h
addons/pvr.vdr.xvdr/: .gitignore  Makefile.am  addon.xml  addon.xml.in
addons/pvr.vdr.xvdr/resources/: settings.xml
addons/pvr.vdr.xvdr/resources/language/Dutch/: strings.xml
addons/pvr.vdr.xvdr/resources/language/English/: strings.xml
addons/pvr.vdr.xvdr/resources/language/Finnish/: strings.xml
addons/pvr.vdr.xvdr/resources/language/German/: strings.xml
addons/repository.xvdr/: Makefile.am  addon.xml
addons/repository.xvdr.linux32/: addon.xml
addons/repository.xvdr.linux64/: addon.xml
addons/repository.xvdr.osx/: addon.xml
addons/repository.xvdr.osx64/: addon.xml
addons/repository.xvdr.rpi/: addon.xml
addons/repository.xvdr.win32/: addon.xml
addons/repository.xvdr64/: addon.xml
data/: .gitignore  Makefile.am  addons.xml.in
debian/: .gitignore  changelog  control  copyright  dirs  rules
jni/: Android.mk  Application.mk
src/: Makefile.am
src/libTcpSocket/: Makefile.am
src/libxvdr/: Makefile.am
src/libxvdr/include/: Makefile.am  XVDRCallbacks.h  XVDRData.h  XVDRDataset.h  XVDRDemux.h  XVDRRecording.h  XVDRResponsePacket.h  XVDRSession.h  XVDRSettings.h  XVDRThread.h  xbmc_pvr_types.h
src/libxvdr/include/xvdr/: Makefile.am  callbacks.h  clientinterface.h  command.h  connection.h  dataset.h  demux.h  msgpacket.h  packetbuffer.h  recording.h  requestpacket.h  responsepacket.h  session.h  thread.h
src/libxvdr/src/: .gitignore  Makefile.am  XVDRCallbacks.cpp  XVDRData.cpp  XVDRDataset.cpp  XVDRDemux.cpp  XVDRRecording.cpp  XVDRResponsePacket.cpp  XVDRSession.cpp  XVDRSettings.cpp  XVDRThread.cpp  callbacks.cpp  clientinterface.cpp  connection.cpp  dataset.cpp  demux.cpp  iso639.cpp  iso639.h  msgpacket.cpp  os-config.cpp  os-config.h  packetbuffer.cpp  packetbuffermodel.h  recording.cpp  requestpacket.cpp  responsepacket.cpp  session.cpp  thread.cpp  tools.cpp
src/libxvdr/src/libTcpSocket/: Makefile.am
src/libxvdr/src/libTcpSocket/linux/: net_posix.c
src/libxvdr/tests/: .gitignore  Makefile.am  ac3analyze.cpp  consoleclient.cpp  consoleclient.h  demux.cpp  listener.cpp  scanner.cpp
src/xvdr/: .gitignore  GUIDialogChannelScanner.cpp  GUIDialogChannelScanner.h  Makefile.am  VNSIData.cpp  VNSIRecording.cpp  XBMCAddon.cpp  XBMCAddon.h  XBMCCallbacks.cpp  XBMCCallbacks.h  XBMCChannelScan.cpp  XBMCChannelScan.h  XBMCClient.cpp  XBMCClient.h  XBMCSettings.cpp  XBMCSettings.h  XVDRChannelScan.cpp  XVDRChannelScan.h  XVDRData.cpp  XVDRData.h  XVDRDemux.cpp  XVDRDemux.h  XVDRRecording.cpp  XVDRRecording.h  XVDRResponsePacket.cpp  XVDRResponsePacket.h  XVDRSession.cpp  XVDRSession.h  XVDRSettings.cpp  XVDRSettings.h  client.cpp  client.h  requestpacket.cpp  responsepacket.cpp  responsepacket.h  thread.cpp  xvdrcommand.h
src/xvdr/dialogs/: GUIDialogBase.cpp  GUIDialogBase.h  GUIDialogChannelScanner.cpp  GUIDialogChannelScanner.h  GUIDialogOk.cpp  GUIDialogOk.h  GUIDialogYesNo.cpp  GUIDialogYesNo.h  Makefile.am
src/xvdr/include/: xbmc_epg_types.h  xbmc_pvr_dll.h  xbmc_pvr_types.h
