SUBDIRS = \
	pvr.vdr.xvdr

DIST_SUBDIRS = \
	$(SUBDIRS)
	
EXTRA_DIST = \
	library.xbmc.addon/dlfcn-win32.c \
	library.xbmc.addon/dlfcn-win32.h \
	library.xbmc.addon/libXBMC_addon.h \
	library.xbmc.pvr/libXBMC_pvr.h \
	library.kodi.guilib/libKODI_guilib.h \
	library.xbmc.codec/libXBMC_codec.h \
	repository.xvdr.linux32/addon.xml \
	repository.xvdr.linux32/icon.png \
	repository.xvdr.linux64/addon.xml \
	repository.xvdr.linux64/icon.png \
	repository.xvdr.rpi/addon.xml \
	repository.xvdr.osx/icon.png \
	repository.xvdr.osx/addon.xml \
	repository.xvdr.osx64/icon.png \
	repository.xvdr.osx64/addon.xml \
	repository.xvdr.rpi/icon.png \
	repository.xvdr.win32/addon.xml \
	repository.xvdr.win32/icon.png
