libxvdrincludedir = $(includedir)/xvdr

libxvdrinclude_HEADERS = \
	DVDDemuxPacket.h \
	xbmc_pvr_types.h \
	requestpacket.h \
	XVDRCallbacks.h \
	xvdrcommand.h \
	XVDRData.h \
	XVDRDemux.h \
	XVDRRecording.h \
	XVDRResponsePacket.h \
	XVDRSession.h \
	XVDRThread.h

EXTRA_DIST = \
	$(libxvdrinclude_HEADERS)

install:

install-include: install-data-am

uninstall:

uninstall-include: uninstall-data-am
