libxvdrincludedir = $(includedir)/xvdr

libxvdrinclude_HEADERS = \
	requestpacket.h \
	XVDRCallbacks.h \
	xvdrcommand.h \
	XVDRData.h \
	XVDRDataset.h \
	XVDRDemux.h \
	XVDRRecording.h \
	XVDRResponsePacket.h \
	XVDRSession.h \
	XVDRThread.h

EXTRA_DIST = \
	$(libxvdrinclude_HEADERS)

install:

install-include: install-data-am

uninstall:

uninstall-include: uninstall-data-am
