libxvdrincludedir = $(includedir)/xvdr

libxvdrinclude_HEADERS = \
	xvdr/clientinterface.h \
	xvdr/command.h \
	xvdr/connection.h \
	xvdr/dataset.h \
	xvdr/demux.h \
	xvdr/msgpacket.h \
	xvdr/session.h \
	xvdr/thread.h

EXTRA_DIST = \
	$(libxvdrinclude_HEADERS)

install:

install-include: install-data-am

uninstall:

uninstall-include: uninstall-data-am
