libxvdrincludedir = $(includedir)/xvdr

libxvdrinclude_HEADERS = \
	callbacks.h \
	command.h \
	connection.h \
	dataset.h \
	demux.h \
	requestpacket.h \
	responsepacket.h \
	session.h \
	thread.h

EXTRA_DIST = \
	$(libxvdrinclude_HEADERS)

install:

install-include: install-data-am

uninstall:

uninstall-include: uninstall-data-am
